syntax = "proto3";

package information;

option go_package = "github.com/MatthewSerre/car/information/proto";

service InformationService {
    rpc GetVehicleInfo(VehicleInfoRequest) returns (VehicleInfoResponse);
    // rpc GetVehicleStatus(VehicleStatusRequest) returns (VehicleStatusResponse);
}

message VehicleInfoRequest {
    string username = 1;
    string pin = 2;
    string jwt_token = 3;
    int64 jwt_expiry = 4;
}

message VehicleInfoResponse {
    string registration_id = 1;
    string vin = 2;
    string generation = 3;
    string mileage = 4;
}

// message VehicleStatusRequest {

// }

// message VehicleStatusResponse {

// }